made changes to prepros scss outputs

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -7,16 +7,14 @@
 /*------------------------------------*\
     #IMPORTS
 \*------------------------------------*/
-@import "_1_base/base";
+/* @import "_1_base/base";
 @import "_2_helpers/helpers";
 @import "_3_vendor/vendor";
 @import "_4_redefine/redefine";
 @import "_5_layout/layout";
 @import "_6_pieces/pieces";
-@import "_7_pages/pages";
+@import "_7_pages/pages"; */
 
-body {
-  img {
-      width: 100%;
-  }
+.background {
+  width: 100%;
 }
