--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -14,9 +14,44 @@
 @import "_5_layout/layout";
 @import "_6_pieces/pieces";
 @import "_7_pages/pages"; */
+$maroon: #591616;
+$red-black: #260507;
+$beige-overlay: rgba(242, 219, 206, 0.5);
 
 .background {
   width: 100%;
-  max-height: 700px;
+  max-height: 675px;
   object-fit: cover;
+}
+
+// NAVIGATION
+nav {
+  background-color: $beige-overlay;
+  width: 100%;
+  max-height: 90px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+
+  ul {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-height: 55px;
+
+    li {
+      list-style: none;
+      padding: 0 20px;
+
+      a{
+        color: $maroon;
+        text-decoration: none;
+
+        img {
+          max-width: 250px;
+        }
+      }
+    }
+  }
 }
