--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -17,6 +17,7 @@
 $maroon: #591616;
 $red-black: #260507;
 $beige-overlay: rgba(242, 219, 206, 0.5);
+$beige: #f2dbce;
 
 .background {
   width: 100%;
@@ -26,6 +27,7 @@ $beige-overlay: rgba(242, 219, 206, 0.5);
 
 // NAVIGATION
 nav {
+  font-family: "minerva-modern",sans-serif;
   background-color: $beige-overlay;
   width: 100%;
   max-height: 90px;
@@ -41,6 +43,7 @@ nav {
     max-height: 55px;
 
     li {
+      text-transform: uppercase;
       list-style: none;
       padding: 0 20px;
 
@@ -54,4 +57,27 @@ nav {
       }
     }
   }
+}
+
+h1 {
+  font-family: "minerva-modern",sans-serif;
+  text-transform: uppercase;
+}
+
+  #homepage-heading {
+    color: $red-black;
+    position: absolute;
+    top: 200px;
+    left: 200px;
+  }
+
+.special-heading {
+  color: $beige;
+  font-family: "bickham-script-pro-3",sans-serif;
+  text-transform: capitalize;
+  display: block;
+  font-size: 7rem;
+  line-height: 12px;
+  margin-left: -.52em;
+  text-shadow: 0 3px 4px rgba(149, 134, 134, 0.75);
 }
