--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -46,6 +46,32 @@ $body-copy: "museo-slab",serif;
 	text-align: center;
 }
 
+.bold {
+	font-weight: 700;
+}
+
+.phone {
+	color: $beige;
+}
+
+// BUTTONS
+.book-now-wrapper {
+	width: 100%;
+	margin: auto;
+	padding-top: 1em;
+}
+
+.red-book-now {
+	font-family: $san-serif;
+	color: $maroon;
+	font-size: 1em;
+	letter-spacing: 3.5px;
+	background-color: rgba(255, 255, 255, 0);
+	border: $red solid 2px;
+	padding: 10px;
+	width: 50%;
+}
+
 // BODY
 body {
 	font-family: $body-copy;
@@ -234,10 +260,6 @@ footer {
 				grid-template-rows: auto;
 				color: $red-black;
 			}
-
-			.phone {
-				color: $beige;
-			}
 		}
 	}
 
@@ -313,10 +335,101 @@ input[type="email"] {
 }
 
 // MEDIA QUERIES
-$breakpoint-tablet: 768px;
+$breakpoints: (
+	xlarge: 1600px,
+	regular-screen: 1200px,
+	tablet: 768px,
+	mobile: 360px
+);
 
-@media screen and (min-width: $breakpoint-tablet) {
+@mixin breakpoint($breakpoint) {
+	// inside breakpoints list
+	@if map-has-key($breakpoints, $breakpoint) {
+		@media (min-width: #{map-get($breakpoints, $breakpoint)}) {
+			@content;
+		}
+	}
+}
+
+@include breakpoint(tablet) {
 	.card-image {
 		display: flex;
 	}
+}
+
+// ----- SALON SERVICES ----- //
+.pages-nav {
+	width: 100%;
+
+	a {
+		img {
+			width: 25%;
+		}
+	}
+
+	ul {
+		li {
+			padding: 10px 0;
+
+			a {
+				text-decoration: none;
+				font-family: $san-serif;
+				color: $maroon;
+				text-transform: uppercase;
+
+				&#current-page {
+					color: $beige;
+				}
+			}
+		}
+	}
+}
+
+// SOCIAL MEDIA SUB PAGES
+.sub-page-social-media {
+	display: flex;
+	justify-content: center;
+
+	a {
+		.icon {
+			fill: $maroon;
+			max-width: 45px;
+			max-height: 45px;
+			padding: 10px;
+		}
+	}
+}
+
+// MAIN
+.salon-services-wrapper {
+	background-color: $beige-overlay;
+	padding: 1em;
+	box-shadow: 3.3px 2.3px 5px 0 rgba(149, 134, 134, 0.75);
+	color: $maroon;
+
+	h1 {
+		letter-spacing: 3.5px;
+		padding-bottom: .5em;
+	}
+
+	h2 {
+		padding-top: 1em;
+	}
+
+	li {
+		list-style: none;
+		padding: 5px 0;
+	}
+}
+
+// FOOTER
+.sub-page-footer {
+	.grid {
+			display: block;
+	}
+}
+
+.maroon-footer {
+	color: $pink;
+	background-color: $maroon;
 }
