--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -7,13 +7,13 @@
 /*------------------------------------*\
     #IMPORTS
 \*------------------------------------*/
-/* @import "_1_base/base";
+@import "_1_base/base";
 @import "_2_helpers/helpers";
 @import "_3_vendor/vendor";
 @import "_4_redefine/redefine";
 @import "_5_layout/layout";
 @import "_6_pieces/pieces";
-@import "_7_pages/pages"; */
+@import "_7_pages/pages";
 
 // COLORS
 $maroon: #591616;
@@ -81,6 +81,7 @@ body {
   width: 100%;
   max-height: 500px;
   object-fit: cover;
+	vertical-align: middle;
 }
 
 // HOME NAVIGATION
@@ -335,26 +336,10 @@ input[type="email"] {
 }
 
 // MEDIA QUERIES
-$breakpoints: (
-	xlarge: 1600px,
-	regular-screen: 1200px,
-	tablet: 768px,
-	mobile: 360px
-);
-
-@mixin breakpoint($breakpoint) {
-	// inside breakpoints list
-	@if map-has-key($breakpoints, $breakpoint) {
-		@media (min-width: #{map-get($breakpoints, $breakpoint)}) {
-			@content;
-		}
-	}
-}
-
-@include breakpoint(tablet) {
-	.card-image {
-		display: flex;
-	}
+.card-image {
+  @include breakpoint(portrait){
+    display: flex;
+  }
 }
 
 // ----- SALON SERVICES ----- //
