changed font size of input fields

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -372,6 +372,7 @@ input[type="email"] {
 	box-sizing: border-box;
 	font-family: $san-serif;
 	color: $beige;
+	font-size: 1em;
 }
 
 .submit-btn {
