--- a/assets/src/scss/_1_base/_base.scss
+++ b/assets/src/scss/_1_base/_base.scss
@@ -3,3 +3,10 @@
 \*------------------------------------*/
 
 @import "wordpress-core";
+
+// BASE SETTING
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
