--- a/assets/src/scss/_3_vendor/_vendor.scss
+++ b/assets/src/scss/_3_vendor/_vendor.scss
@@ -1,3 +1,7 @@
 /*------------------------------------*\
     #VENDORS
 \*------------------------------------*/
+// FONTS
+$san-serif: "minerva-modern",sans-serif;
+$script: "bickham-script-pro-3",sans-serif;
+$body-copy: "museo-slab",serif;
