--- a/assets/src/scss/_5_layout/_header.scss
+++ b/assets/src/scss/_5_layout/_header.scss
@@ -13,16 +13,110 @@ header {
 /*------------------------------------*\
     #NAV
 \*------------------------------------*/
+// HOME NAVIGATION
+.mobile-home-nav {
+	font-family: $san-serif;
+	background-color: $beige-overlay;
+	width: 100%;
+	padding-bottom: 1em;
 
-.nav {
+	@include breakpoint(portrait) {
+		display: none;
+	}
 
 	ul {
-		
-		> li {
+		text-align: center;
+		justify-content: center;
+		align-items: center;
 
-			> a {
+		li {
+			text-transform: uppercase;
+			list-style: none;
+			padding: 5px 20px;
 
-				&:hover {
+			a{
+				color: $maroon;
+				text-decoration: none;
+
+				img {
+					max-width: 250px;
+					width: 25%;
+				}
+			}
+		}
+	}
+}
+
+.home-nav {
+	font-family: $san-serif;
+  background-color: $beige-overlay;
+  width: 100%;
+  max-height: 90px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+	display: none;
+
+	@include breakpoint(portrait) {
+		display: flex;
+	}
+
+  ul {
+		width: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-height: 55px;
+
+    li {
+      text-transform: uppercase;
+      list-style: none;
+      padding: 0 20px;
+
+			:hover {
+				color: $beige;
+			}
+
+      a{
+        color: $maroon;
+        text-decoration: none;
+
+        img {
+					width: 100%;
+          max-width: 250px;
+        }
+      }
+    }
+  }
+}
+
+// ----- SALON SERVICES ----- //
+.pages-nav {
+	width: 100%;
+
+	a {
+		img {
+			width: 25%;
+		}
+	}
+
+	ul {
+		li {
+			padding: 10px 0;
+
+			:hover {
+				color: $beige;
+			}
+
+			a {
+				text-decoration: none;
+				font-family: $san-serif;
+				color: $maroon;
+				text-transform: uppercase;
+
+				&#current-page {
+					color: $beige;
 				}
 			}
 		}
