style spa packages page

--- a/assets/src/scss/_4_redefine/_buttons.scss
+++ b/assets/src/scss/_4_redefine/_buttons.scss
@@ -2,7 +2,7 @@
     #BUTTONS
 \*------------------------------------*/
 // BUTTONS
-.book-now-wrapper {
+.red-book-now-wrapper {
 	width: 100%;
 	margin: auto;
 	padding-top: 1em;
@@ -10,6 +10,19 @@
 	:hover {
 		color: $beige;
 		border: $beige solid 3px;
+		background-color: $red;
+	}
+}
+
+.pink-book-now-wrapper {
+	width: 100%;
+	margin: auto;
+	padding-top: 1em;
+
+	:hover {
+		color: $beige;
+		border: $beige solid 3px;
+		background-color: $pink;
 	}
 }
 
@@ -22,4 +35,17 @@
 	border: $red solid 3px;
 	padding: 10px;
 	width: 50%;
+	max-width: 236px;
+}
+
+.pink-book-now {
+	font-family: $san-serif;
+	color: $pink;
+	font-size: 1em;
+	letter-spacing: 3.5px;
+	background-color: rgba(255, 255, 255, 0);
+	border: $pink solid 3px;
+	padding: 10px;
+	width: 75%;
+	max-width: 236px;
 }
