--- a/assets/src/scss/_5_layout/_header.scss
+++ b/assets/src/scss/_5_layout/_header.scss
@@ -2,13 +2,6 @@
     #HEADER
 \*------------------------------------*/
 
-header {
-
-}
-
-
-
-
 
 /*------------------------------------*\
     #NAV
@@ -95,15 +88,35 @@ header {
 .pages-nav {
 	width: 100%;
 
+	@include breakpoint(small) {
+		display: flex;
+	}
+
 	a {
 		img {
 			width: 25%;
+			max-width: 142px;
+
+			@include breakpoint(small) {
+				width: 75%;
+			}
 		}
 	}
 
 	ul {
+
+		@include breakpoint(small) {
+			display: flex;
+		}
+
 		li {
+			list-style: none;
 			padding: 10px 0;
+
+			@include breakpoint(small) {
+				align-self: center;
+    		padding: 0 10px;
+			}
 
 			:hover {
 				color: $beige;
