--- a/assets/src/scss/_4_redefine/_form.scss
+++ b/assets/src/scss/_4_redefine/_form.scss
@@ -21,6 +21,18 @@ textarea {
 		text-shadow: none;
 	}
 
+	&.searchTerm {
+		border: none;
+	  box-shadow: none;
+	  display: inline-block;
+	  background: transparent;
+		color: $red;
+
+		&::-webkit-input-placeholder {
+			color: $red;
+			font-style: italic;
+		}
+	}
 }
 
 // FORM
@@ -70,5 +82,35 @@ input[type="email"] {
 		letter-spacing: 3.5px;
 	  text-transform: uppercase;
 	  padding: 10px;
+	}
+}
+
+// SEARCH BAR
+.search-bar {
+	padding: 1em;
+}
+
+.search {
+	display: flex;
+	border-radius: 3px;
+	padding: 4px 55px 4px 15px;
+	position: relative;
+	background: $beige;
+	border: 1px solid #ddd;
+	overflow: hidden;
+
+	.searchButton {
+		position: absolute;
+    right: 2px;
+    top: 2px;
+    border-radius: 3px;
+    padding: 5px 10px;
+		background: none;
+
+		.icon {
+			fill: $red;
+			max-width: 25px;
+			max-height: 25px;
+		}
 	}
 }
