--- a/assets/src/scss/_5_layout/_header.scss
+++ b/assets/src/scss/_5_layout/_header.scss
@@ -31,6 +31,11 @@
 				color: $maroon;
 				text-decoration: none;
 
+				&.current-page {
+					color: $beige;
+					text-shadow: 0 3px 4px rgba(31, 31, 31, 0.75);
+				}
+
 				img {
 					max-width: 250px;
 					width: 25%;
@@ -75,6 +80,10 @@
         color: $maroon;
         text-decoration: none;
 
+				&.current-page {
+					color: $beige;
+				}
+
         img {
 					width: 100%;
           max-width: 250px;
@@ -93,6 +102,10 @@
 	}
 
 	a {
+		&#current-page{
+			text-shadow: 0 3px 4px rgba(31, 31, 31, 0.75);
+		}
+
 		img {
 			width: 25%;
 			max-width: 142px;
