--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -29,7 +29,7 @@ body {
 }
 
 // MAIN
-main {
+#spa-packages-main {
   background-color: $beige;
   background-image: url(../img/flower-overlay.png);
   background-blend-mode: overlay;
@@ -48,60 +48,6 @@ main {
 
 	@include breakpoint(small) {
 		grid-template-columns: 1fr 1fr;
-	}
-}
-
-// CARDS
-.card-wrapper {
-	width: 100%;
-	display: flex;
-	grid-area: card;
-
-	&.threading {
-		color: $beige;
-		background-color: $maroon;
-	}
-
-	&.booking {
-		color: $maroon;
-		background-color: $beige;
-	}
-
-	.card {
-		width: 100%;
-		display: flex;
-
-		.card-content {
-			padding: 2em;
-			align-self: center;
-
-			p {
-				padding: 1em;
-
-				a {
-					color: $red;
-				}
-
-				:hover {
-					color: $red-black;
-				}
-			}
-		}
-
-		.card-image {
-			width: 45%;
-			max-width: 467px;
-			display: none;
-
-			@include breakpoint(portrait) {
-		    display: flex;
-		  }
-
-			img {
-				object-fit: cover;
-				overflow: hidden;
-			}
-		}
 	}
 }
 
@@ -163,74 +109,5 @@ main {
 	li {
 	list-style: none;
 	padding: 5px 0;
-	}
-}
-
-// CARDS
-.margin-auto {
-	@include breakpoint(portrait) {
-		width: 75%;
-		margin: auto;
-	}
-}
-.card-package-wrapper {
-	@include breakpoint(small) {
-		margin-top: -25%;
-	}
-}
-
-.package-wrapper {
-	margin-top: 50px;
-	width: 100%;
-	color: $beige;
-	text-align: center;
-
-	@include breakpoint(portrait) {
-		max-width: 733px;
-	}
-
-	&.maroon {
-		background-color: $maroon;
-	}
-
-	&.red {
-		background-color: $red;
-	}
-
-	.package {
-		@include breakpoint(portrait) {
-			display: flex;
-		}
-	}
-
-	.package-image {
-		@include breakpoint(portrait) {
-			overflow: hidden;
-	    display: flex;
-			width: 100%;
-			max-width: 271px;
-		}
-
-			img {
-			width: 100%;
-			max-height: 350px;
-			object-position: top;
-			object-fit: cover;
-
-			@include breakpoint(portrait) {
-				width: 271px;
-			  align-self: center;
-			  object-fit: cover;
-			}
-		}
-	}
-
-	.package-content {
-		padding: 1em;
-		align-self: center;
-
-		p {
-			padding: 10px 0;
-		}
 	}
 }
