styled blog page for desktop

--- a/assets/src/scss/_4_redefine/_form.scss
+++ b/assets/src/scss/_4_redefine/_form.scss
@@ -88,6 +88,16 @@ input[type="email"] {
 // SEARCH BAR
 .search-bar {
 	padding: 1em;
+
+	@include breakpoint(portrait) {
+		width: 50%;
+		padding-top: 10%;
+		margin: auto;
+	}
+
+	@include breakpoint(landscape) {
+		width: 75%;
+	}
 }
 
 .search {
