added animation to heading on index and blog

--- a/assets/src/scss/_6_pieces/_pieces.scss
+++ b/assets/src/scss/_6_pieces/_pieces.scss
@@ -105,6 +105,14 @@ h3 {
 	}
 }
 
+#home-main {
+	background-image: url("../img/flower-overlay.png");
+	background-color: $beige;
+	background-blend-mode: soft-light;
+	padding: 1em;
+	color: $maroon;
+}
+
 // HOME SOCIAL MEDIA
 .social-media-wrapper {
 	background-color: $maroon;
