--- a/assets/src/scss/_2_helpers/_animations.scss
+++ b/assets/src/scss/_2_helpers/_animations.scss
@@ -1,3 +1,22 @@
 /*------------------------------------*\
     #ANIMATIONS
 \*------------------------------------*/
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInLeft {
+  animation-name: slideInLeft;
+}
